# CodingExercises

./: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Jenkinsfile  README.md  jenkins_functions.groovy
git/hooks/: check_for_changes.py  pre-commit  pre-commit.py  update_version_number.py
hooks/: pre-commit.py
inc/private/2015/: aoc15day1.hpp  aoc_2015_day1.hpp  aoc_2015_day2.hpp  aoc_2015_day3.hpp  aoc_2015_day4.hpp  aoc_2015_day5.hpp  aoc_2015_day6.hpp  aoc_2015_day7.hpp  aoc_2015_day8.hpp  aoc_2015_version.hpp  day1.hpp
inc/private/template/: aoc_20XX_dayX.hpp
inc/private/utils/: santa_2015.hpp
inc/public/2015/: aoc_2015.hpp
python/2015/: day1.py  day2.py  year2015_day1.py  year2015_day2.py
python/2023/: day1.py  year2023_day1.py  year2023_day2.py  year2023_day3.py  year2023_day4.py  year2023_day5.py  year2023_day6.py
src/exe/2015/: aoc_2015_exe.cpp
src/private/2015/: aoc15day1.cpp  aoc_2015_day1.cpp  aoc_2015_day2.cpp  aoc_2015_day3.cpp  aoc_2015_day4.cpp  aoc_2015_day5.cpp  aoc_2015_day6.cpp  aoc_2015_day7.cpp  aoc_2015_day8.cpp  day1.cpp
src/private/template/: aoc_20XX_dayX.cpp
src/private/utils/: santa_2015.cpp
src/public/2015/: aoc2015.cpp  aoc_2015.cpp  day1.cpp
test/tools/automation/: aoc_build.py  aoc_run_unit_tests.py
test/tools/conda/: conda_environment.yml  pip_requirements.txt
test/tools/script_configs/: aoc_build_all.yaml  aoc_build_main_exe.yaml  aoc_build_unit_tests.yaml  aoc_run_2015_unit_tests.yaml  aoc_run_single_unit.yaml
test/unit_tests/inc/: aoc_unit_test.h  aoc_unity_test.h  aoc_unity_test_list.h  aoc_unity_test_parameters.h
test/unit_tests/python_tests/: day1_tests.py  day2_tests.py
test/unit_tests/python_tests/2015/: day1_tests.py  day2_tests.py  year2015_day1_tests.py  year2015_day2_tests.py
test/unit_tests/python_tests/2023/: day1_tests.py  year2023_day1_tests.py  year2023_day2_tests.py  year2023_day3_tests.py  year2023_day4_tests.py  year2023_day5_tests.py
test/unit_tests/src/: aoc_unity_test.cpp  aoc_unity_test_list.cpp  aoc_unity_test_parameters.cpp
test/unit_tests/unit/: test_aoc2015.cpp  test_aoc2015_day1.cpp  test_aoc_2015_day1.cpp  test_aoc_2015_day2.cpp  test_aoc_2015_day3.cpp  test_aoc_2015_day4.cpp  test_aoc_2015_day5.cpp  test_aoc_2015_day6.cpp  test_aoc_2015_day7.cpp  test_aoc_2015_day8.cpp  tset_aoc_2015_day3.cpp
